src/test/deca/syntax/valid/test_dir/added/parser/primary_expr_sixth_deriv.deca
{
	new A(); new int_float();
}
