src/test/deca/syntax/invalid/parser/oracle/method_asm_ident.deca
class A { a a (a a) asm (ident); }